[package]
name = "images_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6.2"
actix-multipart = "0.6.1"
futures-util = "0.3.28"
mime = "0.3.17"
image = "0.24.7"
serde = "1.0.188"
serde_json = "1.0.107"
actix-web-middleware-keycloak-auth = "0.4.1"
uuid = { version = "1.4.1", features = [
    "v4", "fast-rng", "macro-diagnostics"
]}
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.17"